--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-permission": "^5.3",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "league/csv": "9.16.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
