--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
+        "league/csv": "9.16.0",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-permission": "^5.3",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "league/csv": "9.16.0"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
