--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 /node_modules
 /public/hot
-/public/storage
+
+/public/storage/*
+!/storage/.gitignore
+!/storage/app/
+
+
 /storage/*.key
 /vendor
 .env
