--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 /node_modules
 /public/hot
 
-/public/storage/*
-!/storage/.gitignore
-!/storage/app/
+# /public/storage/*
+# !/storage/.gitignore
+# !/storage/app/
+# /storage/*.key
 
-
-/storage/*.key
 /vendor
 .env
 .env.backup
