--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 /node_modules
 /public/hot
-
-# /public/storage/*
-# !/storage/.gitignore
-# !/storage/app/
-# /storage/*.key
-
+/public/storage
+/storage/*.key
 /vendor
 .env
 .env.backup
