--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-permission": "^5.3",
+        "twbs/bootstrap-icons": "^1.11",
         "yajra/laravel-datatables": "^1.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
